# knowhere

./: .clang-tidy  .devcontainer.json  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  .ycm_extra_conf.py  CMakeLists.txt  Makefile  OWNERS  README.md  build.sh  cmake_install.cmake  codecov.yml  conanfile.py  dependency.dot  devcontainer.sh  docker-compose.yml  environment.yml
benchmark/: CMakeLists.txt  benchmark_base.h  prepare.sh  utils.h
benchmark/hdf5/: benchmark_binary.cpp  benchmark_binary_range.cpp  benchmark_float.cpp  benchmark_float_bitset.cpp  benchmark_float_qps.cpp  benchmark_float_range.cpp  benchmark_float_range_bitset.cpp  benchmark_hdf5.h  benchmark_knowhere.h  benchmark_knowhere_binary.cpp  benchmark_knowhere_binary_range.cpp  benchmark_knowhere_float.cpp  benchmark_knowhere_float_bitset.cpp  benchmark_knowhere_float_qps.cpp  benchmark_knowhere_float_range.cpp  benchmark_knowhere_float_range_bitset.cpp
benchmark/hdf5/ref_logs/: Makefile
knowhere/: CMakeLists.txt  Makefile  cmake_install.cmake  dependency.dot
knowhere/archive/: BruteForce.cpp  BruteForce.h  KnowhereConfig.cpp  KnowhereConfig.h
knowhere/cache/: DataObj.h
knowhere/common/: BinarySet.h  BlockingQueue.h  Config.h  Dataset.h  Exception.cpp  Exception.h  FileManager.h  FileOperator.h  Heap.cpp  Heap.h  Json.h  Log.cpp  Log.h  MetricType.h  ThreadPool.cpp  ThreadPool.h  ThreadPoolHolder.cpp  ThreadPoolHolder.h  Timer.cpp  Timer.h  Typedef.h  Utils.cpp  Utils.h  lru_cache.h
knowhere/feder/: DiskANN.h
knowhere/index/: Index.h  IndexType.cpp  IndexType.h  VecIndex.h  VecIndexFactory.cpp  VecIndexFactory.h  VecIndexThreadPoolWrapper.h
knowhere/index/preprocessor/: Preprocessor.h
knowhere/index/structured_index/: StructuredIndex.h  StructuredIndexFlat-inl.h  StructuredIndexFlat.h  StructuredIndexSort-inl.h  StructuredIndexSort.h
knowhere/index/structured_index_simple/: StructuredIndex.h  StructuredIndexFlat-inl.h  StructuredIndexFlat.h  StructuredIndexSort-inl.h  StructuredIndexSort.h
knowhere/index/vector_index/: ConfAdapter.cpp  ConfAdapter.h  ConfAdapterMgr.cpp  ConfAdapterMgr.h  FaissBaseBinaryIndex.cpp  FaissBaseBinaryIndex.h  FaissBaseIndex.cpp  FaissBaseIndex.h  IndexAnnoy.cpp  IndexAnnoy.h  IndexBinaryIDMAP.cpp  IndexBinaryIDMAP.h  IndexBinaryIVF.cpp  IndexBinaryIVF.h  IndexDiskANN.cpp  IndexDiskANN.h  IndexDiskANNConfig.cpp  IndexDiskANNConfig.h  IndexHNSW.cpp  IndexHNSW.h  IndexIDMAP.cpp  IndexIDMAP.h  IndexIVF.cpp  IndexIVF.h  IndexIVFHNSW.cpp  IndexIVFHNSW.h  IndexIVFPQ.cpp  IndexIVFPQ.h  IndexIVFSQ.cpp  IndexIVFSQ.h  IndexNGT.cpp  IndexNGT.h  IndexNGTONNG.cpp  IndexNGTONNG.h  IndexNGTPANNG.cpp  IndexNGTPANNG.h  IndexRHNSW.cpp  IndexRHNSW.h  IndexRHNSWFlat.cpp  IndexRHNSWFlat.h  (+11 more)
knowhere/index/vector_offset_index/: IndexIVF_NM.cpp  IndexIVF_NM.h  IndexNSG_NM.cpp  IndexNSG_NM.h  OffsetBaseIndex.cpp  OffsetBaseIndex.h
knowhere/knowhere/archive/: KnowhereConfig.cpp  KnowhereConfig.h
knowhere/knowhere/common/: Config.h  Heap.h  Json.h  Log.cpp  Log.h  MetricType.h  Status.cpp  Utils.cpp
knowhere/knowhere/index/: Index.h  IndexType.cpp
knowhere/knowhere/utils/: CMakeLists.txt  FaissHookFvec.cpp  distances_simd.h  distances_simd_avx.cpp  distances_simd_avx512.cpp
knowhere/utils/: BitsetView.h  CMakeLists.txt  FaissHookFvec.cpp  FaissHookFvec.h  distances_simd.cpp  distances_simd.h  distances_simd_avx.cpp  distances_simd_avx.h  distances_simd_avx512.cpp  distances_simd_avx512.h  distances_simd_sse.cpp  distances_simd_sse.h
selfdev/bruteforce/: CMakeLists.txt
selfdev/bruteforce/distances/: CMakeLists.txt
selfdev/bruteforce/include/: CMakeLists.txt  ConcurrentBitset.h
selfdev/bruteforce/indexing/: CMakeLists.txt  SimpleIndexFlat.cpp
selfdev/bruteforce/test/: test_1_Flat.cpp  test_demo_sift1M.cpp
tests/ut/: CMakeLists.txt  local_file_manager.h  test_bruteforce.cc  test_c_api.cc  test_config.cc  test_diskann.cc  test_distances.cc  test_feder.cc  test_get_vector.cc  test_gpu_search.cc  test_heap.cc  test_ivfflat_cc.cc  test_knowhere_init.cc  test_mmap.cc  test_prometheus.cc  test_range_util.cc  test_search.cc  test_simd.cc  test_utils.cc  utils.h
unittest/: AsyncIndex.h  CMakeLists.txt  Helper.h  LocalFileManager.h  MutiThreadTest.h  ThreadChecker.cpp  ThreadChecker.h  range_utils.h  test_annoy.cpp  test_async.cpp  test_binaryidmap.cpp  test_binaryivf.cpp  test_bruteforce.cpp  test_common.cpp  test_customized_index.cpp  test_diskann.cpp  test_gpuresource.cpp  test_hnsw.cpp  test_idmap.cpp  test_instructionset.cpp  test_ivf.cpp  test_ivf_cpu_nm.cpp  test_ivf_gpu_nm.cpp  test_ivf_hnsw.cpp  test_ivf_nm.cpp  test_knowhere.cpp  test_ngtonng.cpp  test_ngtpanng.cpp  test_nsg.cpp  test_rhnsw.cpp  test_rhnsw_flat.cpp  test_rhnsw_pq.cpp  test_rhnsw_sq8.cpp  test_sptag.cpp  test_structured_index_flat.cpp  test_structured_index_sort.cpp  test_utils.cpp  test_vecindex.cpp  test_wrapper.cpp  utils.cpp  (+1 more)
unittest/benchmark/: CMakeLists.txt  README.md  benchmark_base.h  benchmark_faiss.cpp  benchmark_faiss_test.cpp  benchmark_knowhere.h  benchmark_knowhere_binary.cpp  benchmark_knowhere_binary_range.cpp  benchmark_knowhere_float.cpp  benchmark_knowhere_float_range.cpp  benchmark_knowhere_perf.cpp  benchmark_knowhere_test.cpp  benchmark_sift.h  prepare.sh
unittest/benchmark/hdf5/: benchmark_faiss_float.cpp  benchmark_hdf5.h  benchmark_knowhere.h  benchmark_knowhere_binary.cpp  benchmark_knowhere_binary_range.cpp  benchmark_knowhere_float.cpp  benchmark_knowhere_float_qps.cpp  benchmark_knowhere_float_range.cpp  benchmark_knowhere_float_range_multi.cpp  benchmark_knowhere_float_range_multi_qps.cpp  benchmark_knowhere_float_range_qps.cpp  benchmark_knowhere_perf.cpp
unittest/benchmark/ref_log/: Makefile
unittest/benchmark/ssnpp/: benchmark_knowhere.h  (+6 more)
unittest/faiss_benchmark/: CMakeLists.txt  faiss_bitset_test.cpp
unittest/knowhere_benchmark/: CMakeLists.txt  knowhere_benchmark_test.cpp
unittest/pycase/: test.py  test_annoy.py  test_async.py  test_diskann.py  test_hnsw.py  test_ivf.py  test_ivfsq.py
ut/: CMakeLists.txt  test_config.cc  test_search.cc  utils.h
(+294 files in other folders)
